[package]
name = "retx-path-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0.100"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
regex = "1.9.1"
regex-syntax = "0.7.3"
anyhow = "1.0.71"